--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
+    <script src="script/gameManagaer.js"></script>
+    
     <title>Space Invaders</title>
 </head>
 <body>
     <h1>Space Invaders</h1>
     <div id="workspace">
-
+        <div id="player"></div>
     </div>
+    <button onclick="gameStart()">Start</button>
 </body>
+<script src="script/settings.js"></script>
+<script src="script/player.js"></script>
 </html>
