--- a/index.html
+++ b/index.html
@@ -4,17 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
-    <script src="script/gameManagaer.js"></script>
-    
     <title>Space Invaders</title>
 </head>
 <body>
     <h1>Space Invaders</h1>
     <div id="workspace">
+    <div id="up-border" class="horizontal-b"></div>
+    <div id="left-border" class="vertical-b"></div>
+    <div id="right-border" class="vertical-b"></div>
+    <div id="down-border" class="horizontal-b"></div>
+    
+        <div id="wrapper-ennemies">
+            <div class="ennemy"></div>
+            <div class="ennemy"></div>
+            <div class="ennemy"></div>
+        </div>
         <div id="player"></div>
     </div>
     <button onclick="gameStart()">Start</button>
 </body>
+<script src="script/gameManager.js"></script>
 <script src="script/settings.js"></script>
+<script src="script/collisions.js"></script>
 <script src="script/player.js"></script>
+<script src="script/ennemies.js"></script>
 </html>
