work done correctly

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         <div id="right-border" class="vertical-b"></div>
         <div id="down-border" class="horizontal-b"></div>
 
+        <div id="tilemap"></div>
+
         <div id="wrapperennemies">
             <!-- generate enemy here -->
         </div>
